Added timer and logics

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <p>Place the queens on the board so that none can attack each other.</p>
     <div id="board"></div>
     <div id="message">Place 8 queens</div>
-    <button id="reset">Reset</button>
+    <div id="timer-container">
+        <button id="reset">Reset</button>
+        <div id="timer"></div>
+    </div>
 
 
     <script src="./assets/script.js"></script>
