--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <script src="./assets/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script> <!-- script for animation -->
 
 </body>
 
